# node-tesseract-ocr

./: .clangd  .dockerignore  .env.local  .gitignore  .header.nvim  CMakeLists.txt  Dockerfile  README.md  SECURITY.md  binding-options.js  binding.gyp  commit-message-guidelines.md  package-lock.json  package.json  tsconfig.base.json  tsconfig.cjs.json  tsconfig.examples.json  tsconfig.json  tsconfig.type-tests.json  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1-bug-report.yaml  2-feature-request.yaml  3-docs-bug.yaml
.github/workflows/: prebuild-and-publish.yml  prebuild.yml  publish.yml
examples/: multi-page.ts  recognize.ts
lib/: index.d.ts  index.ts  types.ts  utils.ts
src/: addon.cpp  commands.hpp  handle.cpp  handle.h  monitor.hpp  ocr_result.cpp  ocr_result.h  ocr_result_worker.cpp  ocr_result_worker.h  ocr_worker.cpp  ocr_worker.h  tesseract_wrapper.cpp  tesseract_wrapper.hpp  utils.hpp  worker_thread.cpp  worker_thread.hpp
tests/cpp/: test_utils.cpp
tests/js/: setup.ts  tesseract.test.ts  traineddata.test.ts
tests/types/: variables.typetest.ts
